Fixed: Bug 52555 - LG G4, Chrome - Filename overlap with file size
Root cause: short title still too long on smartphones
Solution: restrict length even more on smartphones + overflow (ellipsis)
    on CSS layer
Resolution state: fix

--- a/ui/apps/io.ox/core/attachments/style.less
+++ b/ui/apps/io.ox/core/attachments/style.less
@@ -186,6 +186,8 @@
             span.file {
                 width:210px;
                 float:left;
+                overflow-x: hidden;
+                text-overflow: ellipsis;
             }
 
             span.filesize {
